--- a/ConfigEditor/App.xaml
+++ b/ConfigEditor/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WXE.Internal.Tools.ConfigEditor.ConfigEditor.App"
+﻿<Application x:Class="QXEditorModule.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Shell.xaml">
