--- a/ConfigEditor/Resources/Styles.xaml
+++ b/ConfigEditor/Resources/Styles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:views="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views;assembly=WXE.Internal.Tools.ConfigEditor.XMLEditorModule"
+  xmlns:views="clr-namespace:QXEditorModule.Views;assembly=QXEditorModule"
     >
     
  
