--- a/ConfigEditor/Shell.xaml
+++ b/ConfigEditor/Shell.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="WXE.Internal.Tools.ConfigEditor.ConfigEditor.MainWindow"
+﻿<Window x:Class="QueueExchange.ConfigEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:editorModule="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views;assembly=WXE.Internal.Tools.ConfigEditor.XMLEditorModule"
+        xmlns:editorModule="clr-namespace:QXEditorModule.Views;assembly=QXEditorModule"
         Icon="QXEd.ico"
         Title="Queue Exchange Configuration Utility" Height="800" Width="1400" WindowStartupLocation="CenterScreen" Background="WhiteSmoke">
     <Window.Resources>
