--- a/XMLEditorModule/Views/FilterCustomEditor.xaml
+++ b/XMLEditorModule/Views/FilterCustomEditor.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views.FilterCustomEditor"
+﻿<UserControl x:Class="QXEditorModule.Views.FilterCustomEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views"
+             xmlns:local="clr-namespace:QXEditorModule.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
