--- a/XMLEditorModule/Views/QXAbout.xaml
+++ b/XMLEditorModule/Views/QXAbout.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views.QXAbout"
+﻿<Window x:Class="QXEditorModule.Views.QXAbout"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="About QX Configure"
