--- a/XMLEditorModule/Views/ServiceConfig.xaml
+++ b/XMLEditorModule/Views/ServiceConfig.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views.ServiceConfig"
+﻿<Window x:Class="QXEditorModule.Views.ServiceConfig"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="Service Values"
