--- a/XMLEditorModule/Views/TreeEditorView.xaml
+++ b/XMLEditorModule/Views/TreeEditorView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views.TreeEditorView"
+﻿<UserControl x:Class="QXEditorModule.Views.TreeEditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:local="clr-namespace:WXE.Internal.Tools.ConfigEditor.Common"
-             xmlns:views="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views"
+             xmlns:local="clr-namespace:QXEditorModule.Common"
+             xmlns:views="clr-namespace:QXEditorModule.Views"
              xmlns:xmlNS="clr-namespace:System.Xml;assembly=System.Xml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local1="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Common"
+             xmlns:local1="clr-namespace:QXEditorModule.Common"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1200" Name="loaderWindow"  >
@@ -18,7 +18,7 @@
         <local:XmlAttributesToLableConverter x:Key="XmlAttributesToLableConverter"/>
         <local1:TaskListDataTemplateSelector x:Key="myDataTemplateSelector"/>
 
-      
+
         <Canvas x:Key="input" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="40" Height="47" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
             <Path x:Name="path" Width="40.25" Height="47"  Stretch="Uniform" Fill="#FF000000" Data="F1 M 35,51L 51,51L 43,43L 49.25,43L 60.25,53.5L 50.25,64L 43,64L 51,56L 35,56L 35,51 Z M 20,17L 43.25,17L 56,29.75L 56,47.75L 52,43.75L 52,34L 39,34L 39,21L 24,21L 24,55L 33.75,55L 34.75,59L 20,59L 20,17 Z M 43,22.25L 43,30L 50.75,30L 43,22.25 Z "/>
         </Canvas>
@@ -245,7 +245,7 @@
         </HierarchicalDataTemplate>
 
         <XmlDataProvider x:Key="xmlDataProvider"></XmlDataProvider>
-        <local:TreeViewHeightConverter x:Key="TreeViewHeightConverter"/>
+        <!--<local:TreeViewHeightConverter x:Key="TreeViewHeightConverter"/>-->
     </UserControl.Resources>
 
     <Grid>
