--- a/XMLEditorModule/Views/TreeEditorsView.xaml
+++ b/XMLEditorModule/Views/TreeEditorsView.xaml
@@ -1,8 +1,8 @@
-﻿<UserControl x:Class="WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views.TreeEditorsView"
+﻿<UserControl x:Class="QXEditorModule.Views.TreeEditorsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:views="clr-namespace:WXE.Internal.Tools.ConfigEditor.XMLEditorModule.Views"
+             xmlns:views="clr-namespace:QXEditorModule.Views"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Background="WhiteSmoke">
