--- a/XMLEditorModule/Views/TreeEditorView.xaml
+++ b/XMLEditorModule/Views/TreeEditorView.xaml
@@ -14,7 +14,10 @@
     <UserControl.Resources>
 
          <local1:TaskListDataTemplateSelector x:Key="myDataTemplateSelector"/>
-
+        <local:AddChildVisibilityConverter x:Key="AddChildVisibilityConverter"/>
+        <local:RemoveChildVisibilityConverter x:Key="RemoveChildVisibilityConverter"/>
+        <local:XmlAttributesToLableConverter x:Key="XmlAttributesToLableConverter"/>
+       
 
         <Canvas x:Key="input" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="40" Height="47" Clip="F1 M 0,0L 76,0L 76,76L 0,76L 0,0">
             <Path x:Name="path" Width="40.25" Height="47"  Stretch="Uniform" Fill="#FF000000" Data="F1 M 35,51L 51,51L 43,43L 49.25,43L 60.25,53.5L 50.25,64L 43,64L 51,56L 35,56L 35,51 Z M 20,17L 43.25,17L 56,29.75L 56,47.75L 52,43.75L 52,34L 39,34L 39,21L 24,21L 24,55L 33.75,55L 34.75,59L 20,59L 20,17 Z M 43,22.25L 43,30L 50.75,30L 43,22.25 Z "/>
@@ -248,7 +251,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="25" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Margin="0,0,0,0">
 
@@ -357,8 +360,8 @@
 
         </Grid>
 
-        <Grid Grid.Row="2">
-            <StatusBar  Background="Black" VerticalAlignment="Top">
+        <Grid Grid.Row="1">
+            <StatusBar Height="25" Background="Black" VerticalAlignment="Top">
                 <StatusBarItem>
                     <TextBlock Text="{Binding Path=Path}" Foreground="LightGray" ></TextBlock>
                 </StatusBarItem>
