--- a/XMLEditorModule/Views/TreeEditorView.xaml
+++ b/XMLEditorModule/Views/TreeEditorView.xaml
@@ -265,7 +265,7 @@
             <TreeView Name="xmlTreeView"
                   ItemsSource="{Binding Source={StaticResource xmlDataProvider}, XPath=*}"
                   ItemTemplateSelector="{StaticResource myDataTemplateSelector}"
-                  TreeViewItem.Selected="xmlTreeView_Selected"  >
+                  TreeViewItem.Selected="XmlTreeView_Selected"  >
                 <TreeView.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
                       Color="LightGray" />
