--- a/ConfigEditor/Shell.xaml
+++ b/ConfigEditor/Shell.xaml
@@ -13,6 +13,6 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <editorModule:CommandsBarView Name="commandBarView"  Grid.Row="0"></editorModule:CommandsBarView>
-        <editorModule:TreeEditorsView Grid.Row="1" x:Name="editorsView"></editorModule:TreeEditorsView>
+        <editorModule:TreeEditorsView Grid.Row="1" x:Name="editorsView" Loaded="editorsView_Loaded"></editorModule:TreeEditorsView>
     </Grid>
 </Window>
