qMon Protection, Rest Listener for Monitor, Splash and About Build Num

--- a/ConfigEditor/Shell.xaml
+++ b/ConfigEditor/Shell.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:editorModule="clr-namespace:QXEditorModule.Views;assembly=QXEditorModule"
         Icon="QXEd.ico"
+        ContentRendered="Window_ContentRendered" 
         Title="Queue Exchange Configuration Utility" Height="800" Width="1400" WindowStartupLocation="CenterScreen" Background="WhiteSmoke">
     <Window.Resources>
 
